# isoforest

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
benches/: isoforest_benchmark.rs
examples/: simple.rs
py-isoforest/: CHANGES.rst  Cargo.toml  Makefile  pyproject.toml  requirements-dev.txt  setup.py
py-isoforest/examples/: plot_anomaly_comparison.py  plot_isolation_forest.py
py-isoforest/isoforest/: __init__.py
py-isoforest/src/: lib.rs
py-isoforest/tests/: test_isoforest.py
src/: error.rs  forest.rs  lib.rs  tree.rs
