[package]
name = "isoforest"
version = "0.1.0"
authors = ["Nikolay Novik <nickolainovik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# linfa = { git = "https://github.com/rust-ml/linfa" }
linfa = "0.3.0"
ndarray = { version = "0.13" , features = ["rayon", "approx"]}
ndarray-rand = "0.11"
##rand = "0.7.3"

[dev-dependencies]
rand_isaac = "0.2.0"
approx = "0.3"


[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]
