[package]
name = "isoforest"
version = "0.1.0"
authors = ["Nikolay Novik <nickolainovik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linfa = "0.3.1"
rand_isaac = "0.2.0"
ndarray = { version = "0.13" , features = ["rayon", "approx"]}
ndarray-rand = "0.11"
ndarray-stats = "0.3"
thiserror = "1"

[dev-dependencies]
rand_isaac = "0.2.0"
approx = "0.3"
criterion = "0.3"

[[bench]]
name = "isoforest_benchmark"
harness = false

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]

[profile.release]
debug = true
opt-level = 3
