[package]
name = "py-isoforest"
version = "0.0.1"
authors = ["Nikolay Novik <nickolainovik@gmail.com>"]
edition = "2018"

[lib]
name = "rust_ext"
crate-type = ["cdylib"]

[dependencies]
linfa = "0.3.1"
numpy = "0.12.2"
ndarray = "0.13"
isoforest = { path = ".." }
ndarray-rand = "0.11"
rand_isaac = "0.2.0"

[dependencies.pyo3]
version = "0.12.0"
features = ["extension-module"]
